<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_home"
            android:menuCategory="secondary" />

        <item
            android:id="@+id/courses"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/courses"
            android:menuCategory="secondary"/>

        <item
            android:id="@+id/enroll"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/enroll"
            android:menuCategory="secondary"/>

        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/login"
            android:menuCategory="secondary"/>

        <item
            android:id="@+id/notice"
            android:icon="@drawable/ic_baseline_campaign_24"
            android:title="@string/menu_notice"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_baseline_event_24"
            android:title="@string/news"
            android:menuCategory="secondary"/>

        <item
            android:id="@+id/result"
            android:icon="@drawable/ic_baseline_insert_drive_file_24"
            android:title="@string/result"
            android:menuCategory="secondary"/>

        <item
            android:id="@+id/degree"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/deg"
            android:menuCategory="secondary"/>


    </group>
</menu>

<!--    menu category secondary se back button press karne par back ek ek karke hi hoga-->
